--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ node_modules/
 # Logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# Optional eslint cache
+.eslintcache
 
 # Optional npm cache directory
 .npm
@@ -19,10 +20,6 @@ trace.zip
 # Environment files
 .env
 .env.*.local
-
-# OS files
-.DS_Store
-Thumbs.db
 
 # Editors/IDEs
 .vscode/
